<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/films" />
    <item
        android:id="@+id/main"
        android:enabled="true"
        android:icon="@drawable/filmlist"
        android:title="@string/history" />
    <item
        android:id="@+id/maps"
        android:enabled="true"
        android:icon="@drawable/maps"
        android:title="@string/map" />
    <item
        android:id="@+id/settings"
        android:enabled="true"
        android:icon="@drawable/filter"
        android:title="@string/settings" />
    <item
        android:id="@+id/phones"
        android:enabled="true"
        android:icon="@drawable/telephone"
        android:title="@string/settings" />
</menu>